k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banking-api-service
  namespace: banking
spec:
  type: ClusterIP
  selector:
    app: banking-api
  ports:
    - port: 80
      targetPort: 8000
